syntax = "proto2";

message PasswordResetEmpty {}

message CreateTokenRequest {
    required string email = 1;
}

message CreateTokenResponse {
    required string token = 1;
}

message ResetPasswordRequest {
    required string token = 1;
    required string password = 2;
}

service PasswordReset {
    rpc create_token (CreateTokenRequest) returns (CreateTokenResponse);
    rpc reset_password (ResetPasswordRequest) returns (PasswordResetEmpty);
}
